--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -256,6 +256,22 @@ p {
     z-index: 1;
 }
 
+#hero .social-icon {
+    display: flex;
+    margin-top: 30px;
+    justify-content: center;
+}
+
+#hero .social-item {
+    height: 50px;
+    width: 50px;
+    margin: 0 5px;
+}
+
+#hero .fade-in {
+    animation: fade_in 3s ease;
+}
+
 
 #hero::after {
     content: '';
@@ -326,7 +342,7 @@ p {
 
 /* Services Section */
 
-#services .services {
+#skills .skills {
     flex-direction: column;
     text-align: center;
     max-width: 1500px;
@@ -334,13 +350,13 @@ p {
     padding: 100px 0;
 }
 
-#services .service-top {
+#skills .skill-top {
     max-width: 600px;
     margin: 0 auto;
 }
 
 
-#services .service-bottom {
+#skills .skill-bottom {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -348,7 +364,7 @@ p {
     margin-top: 50px;
 }
 
-#services .service-item {
+#skills .skill-item {
     flex-basis: 80%;
     display: flex;
     align-items: flex-start;
@@ -364,7 +380,7 @@ p {
     overflow: hidden;
 }
 
-#services .service-item::after {
+#skills .skill-item::after {
     content: '';
     position: absolute;
     left: 0;
@@ -376,25 +392,25 @@ p {
     z-index: -1;
 }
 
-#services .service-bottom .icon {
+#skills .skill-bottom .icon {
     height: 80px;
     width: 80px;
     margin-bottom: 20px;
 }
 
-#services .service-item h2 {
+#skills .skill-item h2 {
     font-size: 2rem;
     color: white;
     margin-bottom: 10px;
     text-transform: uppercase;
 }
 
-#services .service-item p {
+#skills .skill-item p {
     color: white;
     text-align: left;
 }
 
-/* End services section */
+/* End skills section */
 
 /* Start project section */
 #projects .projects {
@@ -607,6 +623,7 @@ background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     margin-bottom: 30px;
 }
 
+
 #footer .social-item {
     height: 50px;
     width: 50px;
@@ -661,6 +678,23 @@ background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     }
 }
 
+@keyframes fade_in {
+    0% {
+        opacity: 0;
+        transform: scale3d(.75,.75,1);
+    }
+
+    70% {
+        opacity: 0;
+        transform: scale3d(.75,.75,1);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale3d(1,1,1);
+    }
+}
+
 /* Media query for tablet */
 @media only screen and (min-width:768px) {
     .cta{
@@ -676,11 +710,11 @@ background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     }
 
     .header__sub__title__container{
-        font-size: 1.rem;
+        font-size: 1.6rem;
     }
 
     /* Service section */
-    #services .service-bottom .service-item {
+    #skills .skill-bottom .skill-item {
         flex-basis: 45%;
         margin: 1.5%;
     }
@@ -807,7 +841,7 @@ background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
         display: none;
     }
 
-    #services .service-bottom .service-item {
+    #skills .skill-bottom .skill-item {
 		flex-basis: 22%;
 		margin: 1.5%;
 	}
