--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -50,7 +50,7 @@ p {
 }
 
 .section-title span {
-    color: crimson;
+    color: deepskyblue;
 }
 
 .cta {
@@ -58,7 +58,7 @@ p {
     padding: 10px 30px;
     color: white;
     background-color: transparent;
-    border: 2px solid crimson;
+    border: 2px solid deepskyblue;
     font-size: 2rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
@@ -69,7 +69,7 @@ p {
 
 .cta:hover {
     color: white;
-    background-color: crimson;
+    background-color:deepskyblue;
 }
 
 .brand h1 {
@@ -79,7 +79,7 @@ p {
 }
 
 .brand h1 span {
-    color: crimson;
+    color: deepskyblue;
 }
 
 /* Header */
@@ -121,7 +121,7 @@ p {
 
 .header__detail a:hover {
     
-    opacity: .7;
+    opacity: .6;
 }
 
 
@@ -189,6 +189,10 @@ p {
     letter-spacing: initial;
 }
 
+#header .nav-list ul li:hover a {
+    color:deepskyblue;
+}
+
 #header .hamburger {
     z-index: 100;
     height: 60px;
@@ -249,17 +253,78 @@ p {
 }
 /* Hero section */
 #hero {
-    background-image: url(mountain.jpg);
+    /* background-image: url(mountain.jpg); */
     background-size: cover;
+    /* background: linear-gradient(-45deg, #6094ea, #A165D7, #dd77c5, #29323c); */
+    background: linear-gradient(-45deg,  #29323c, #5b247a, #387eaf, #1bcedf);
+    animation: gradient-bg 15s ease infinite;
     background-position: top center;
     position: relative;
+    overflow: hidden;
+    background-size: 400% 400%;
     z-index: 1;
+}
+
+#hero .wave {
+     position: absolute;
+     bottom: 0;
+     left: 0;
+     width: 100%;
+     height: 100px;
+     background: url(wave.png);
+     background-size: 1000px 100px;
+}
+
+#hero .wave.water
+{
+   animation: animate 25s linear infinite;
+   z-index:1000;
+   opacity:1;
+   animation-delay: 0s;
+   bottom:0;
+
+}
+
+#hero .wave.water:nth-child(2)
+{
+   animation: animate2 15s linear infinite;
+   z-index:999;
+   opacity:0.5;
+   animation-delay: -5s;
+   bottom:10px;
+
+}
+#hero .wave.water:nth-child(3)
+{
+   animation: animate 30s cubic-bezier(.55, .5,.45,.5) infinite;
+   z-index:998;
+   opacity:0.2;
+   animation-delay: -5s;
+   bottom:15px;
+
+}
+#hero .wave.water:nth-child(4)
+{
+   animation: animate2 5s linear infinite;
+   z-index:997;
+   opacity:0.7;
+   animation-delay: -5s;
+   bottom:20px;
+
 }
 
 #hero .social-icon {
     display: flex;
     margin-top: 30px;
     justify-content: center;
+}
+
+#hero .social-icon img {
+    opacity: .7;
+}
+
+#hero .social-icon img:hover {
+    opacity: 1;
 }
 
 #hero .social-item {
@@ -272,7 +337,7 @@ p {
     animation: fade_in 3s ease;
 }
 
-
+/* 
 #hero::after {
     content: '';
     position: absolute;
@@ -283,7 +348,7 @@ p {
     background-color: black;
     opacity: .7;
     z-index: -1;
-}
+} */
 
 #hero .hero {
     max-width: 1200px;
@@ -319,9 +384,8 @@ p {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
     width: 0;
-    background-color: crimson;
+    background-color: #00bfff;
     animation: text_reveal_box 1s ease;
     animation-delay: .5s;
 }
@@ -483,7 +547,7 @@ p {
     height: 100%;
     width: 100%;
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-    opacity: .5;
+    opacity: .3;
 }
 #projects .project-img img {
     transition: .3s ease transform;
@@ -530,6 +594,10 @@ p {
     font-size: 2rem;
 }
 
+#about .col-right .cta:hover {
+    color: white;
+}
+
 #about .col-left .about-img {
     height: 100%;
     width: 100%;
@@ -544,7 +612,7 @@ p {
     top: 19px;
     height: 98%;
     width: 98%;
-    border: 7px solid crimson;
+    border: 7px solid deepskyblue;
     z-index: -1;
 }
 /* end about me*/
@@ -594,6 +662,14 @@ p {
     font-size: 1.3rem;
     line-height: 2rem;
     font-weight: 500;
+}
+
+#contact a h2 {
+    color: black;
+}
+
+#contact a h2:hover {
+    opacity: .7;
 }
 /* end contact section */
 
@@ -656,6 +732,38 @@ background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     }
 }
 
+@keyframes gradient-bg
+{
+    0%{
+        background-position: 0% 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0% 50%;
+    }
+}
+
+@keyframes animate
+{
+   0%{
+       background-position-x: 0;
+   }
+   100%{
+       background-position-x: 1000px;
+   }
+}
+@keyframes animate2
+{
+   0%{
+       background-position-x: 0;
+   }
+   100%{
+       background-position-x: -1000px;
+   }
+}
+
 @keyframes text_reveal_box {
     50% {
         width: 100%;
@@ -674,7 +782,7 @@ background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 
 @keyframes text_reveal_name {
     100% {
-        color: crimson;
+        color:deepskyblue;
     }
 }
 
@@ -759,7 +867,7 @@ background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
         top: 34px;
         height: 98%;
         width: 98%;
-        border: 10px solid crimson;
+        border: 10px solid deepskyblue;
     }
 
     #about .col-right {
@@ -774,7 +882,7 @@ background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     /* Contact */
     #contact .contact {
         flex-direction: column;
-        padding: 100px 0;
+        padding: 120px 0;
         align-items: center;
         justify-content: center;
         min-height: 20vh;
